Creacion de modelo casa y creacion de sp : USE [PVI_ProyectoFinal] GO ALTER TABLE Casas ALTER COLUMN nombre_casa NVARCHAR(MAX);
USE [PVI_ProyectoFinal]
GO
CREATE OR ALTER PROCEDURE SP_GetCasas
AS
BEGIN
    SELECT c.id_casa, c.nombre_casa, c.metros_cuadrados, c.numero_habitaciones,
           c.numero_banos, p.nombre AS propietario,
           c.fecha_construccion, c.estado
    FROM Casas c
    JOIN Persona p ON c.id_persona = p.id_persona
    ORDER BY c.nombre_casa ASC;
END;

CREATE OR ALTER PROCEDURE SP_InsertCasa
    @nombre NVARCHAR(50),
    @metrosCuadrados DECIMAL(10,2),
    @numeroHabitaciones INT,
    @numeroBanos INT,
    @idPersona INT,
    @fechaConstruccion DATE,
    @estado BIT
AS
BEGIN
    INSERT INTO Casas (nombre_casa, metros_cuadrados, numero_habitaciones, numero_banos, id_persona, fecha_construccion, estado)
    VALUES (@nombre, @metrosCuadrados, @numeroHabitaciones, @numeroBanos, @idPersona, @fechaConstruccion, @estado);
END;

CREATE PROCEDURE sp_InactivateCasa
    @id INT
AS
BEGIN
    UPDATE Casas
    SET estado = 0
    WHERE id_casa = @id;

--- a/ProyectoCondominios/ProyectoCondominios.csproj
+++ b/ProyectoCondominios/ProyectoCondominios.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Casa.cs" />
     <Compile Include="Models\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
