--- a/ProyectoCondominios/ProyectoCondominios.csproj
+++ b/ProyectoCondominios/ProyectoCondominios.csproj
@@ -345,10 +345,10 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\LogIn\LogIn.cshtml" />
+    <Content Include="Views\Casas\Casas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Casas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
