--- a/ProyectoCondominios/Web.config
+++ b/ProyectoCondominios/Web.config
@@ -98,8 +98,7 @@
   </system.codedom>
 
 	<connectionStrings>
-		<add name="MyDatabase" providerName="System.Data.SqlClient"
-			connectionString="Data Source=MSI\SQLEXPRESS;Database=PVI_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+		<add name="MyDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=MSI\SQLEXPRESS;Database=PVI_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
 	</connectionStrings>
 	
 	
