--- a/ProyectoCondominios/packages.config
+++ b/ProyectoCondominios/packages.config
@@ -12,10 +12,15 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="5.1.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.3" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.24.0" targetFramework="net472" />
@@ -25,6 +30,7 @@
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.24.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.24.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
